# AutoKnee-Server

./: .gitignore  README.md
src/audio_capture/: package.xml  setup.cfg  setup.py
src/audio_capture/audio_capture/: mic_publisher.py  speech_recognizer.py
src/bone_peak_nav/: package.xml  setup.cfg  setup.py
src/bone_peak_nav/bone_peak_nav/: bone_peak_nav_node.py
src/bone_peak_nav/launch/: servo.launch.py
src/bone_scan_trajectory/: package.xml  setup.cfg  setup.py
src/bone_scan_trajectory/bone_scan_trajectory/: bone_scan_trajectory_node.py
src/fri/: README.md
src/ir_tracking/: BBT-TrackerA-Gray_Polaris.rom  README.txt  package.xml  setup.cfg  setup.py
src/ir_tracking/ir_tracking/: ir_tracking_node.py  pose_ekf.py  vega_discover.py
src/ir_tracking/roms/: BBT-110017Rev1-FemurTracker-SPH.rom
src/ir_tracking/scripts/: chut.py  dump.txt  ir_tracking_node.py  requirements.txt  vega_multi_track.py  vega_ros2_publisher.py  vega_viz_3d.py
src/lbr_fri_ros2_stack/: CHANGELOG.rst  CITATION.cff
src/lbr_fri_ros2_stack/lbr_bringup/: package.xml
src/lbr_fri_ros2_stack/lbr_description/: package.xml
src/lbr_fri_ros2_stack/lbr_fri_ros2/: package.xml
src/lbr_fri_ros2_stack/lbr_fri_ros2_stack/: package.xml
src/lbr_fri_ros2_stack/lbr_ros2_control/: package.xml
src/scan_and_merge/: package.xml  setup.cfg  setup.py
src/scan_and_merge/config/: bone_mover.yaml  detect_node.yaml
src/scan_and_merge/foxglove/: multi_orientation_calibration.json
src/scan_and_merge/launch/: robot.launch.py  scan.launch.py  scan_and_merge.launch.py
(+39 files in other folders)
